# projeto2

./: build.sh  build.yml  db.sqlite3  pyproject.toml  requirements.txt  vercel.json
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
musker/: forms.py  models.py  urls.py  views.py
musker/migrations/: 0001_initial.py  0002_alter_profile_date_modified_and_more.py  0003_alter_profile_date_modified_and_more.py  0004_alter_profile_date_modified_and_more.py  0005_alter_profile_facebook_link_and_more.py  0006_comment.py  0007_alter_comment_content.py
musker/templates/: add_comment.html  base.html  edit_meep.html  followers.html  follows.html  home.html  profile.html  profile_list.html  show_meep.html
social/: settings.py  urls.py
